--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,7 +1,7 @@
 flask>=2.0.0
 flask-socketio>=5.3.0
 python-dotenv>=1.0.0
-google-generativeai>=0.3.1
+google-genai==1.11.0
 python-weather>=1.0.1
 googlemaps>=4.10.0
 beautifulsoup4>=4.12.2
@@ -13,3 +13,4 @@ requests>=2.31.0
 aiohttp>=3.8.5
 playwright>=1.42.0
 mcp==1.1.2
+numpy==2.2.5
